--- a/css/style.css
+++ b/css/style.css
@@ -780,6 +780,7 @@ ion-item.item.item-thumbnail-left.trns-add {
 .centered {
     position: absolute;
     top: 50%;
+/*
     width: 100%;
     text-align: center;
     -webkit-transform: translateY(-50%);
@@ -787,6 +788,7 @@ ion-item.item.item-thumbnail-left.trns-add {
     -moz-transform: translateY(-50%);
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
+*/
 }
 
 .row.nopad {
@@ -957,4 +959,25 @@ margin-left: 15px;
 }
 .buy-form input{
 	color: #9F9F9F;
+}
+
+.centers
+{
+  position: absolute;
+  top: 50%;
+  background-color: #fff;
+  width: 100%;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px 0px;
+}
+.centers-pro
+{
+  position: absolute;
+/*  top: 50%;*/
+  background-color: #fff;
+  width: 100%;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px 0px;
 }
