--- a/templates/selling.html
+++ b/templates/selling.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Selling Approval">
-    <div class="centered" ng-if="req.length==0">No approvals yet.</div>
+    <div class="centers" ng-if="req.length==0">No approvals yet.</div>
     <ion-content class="padding">
         <div class="incard" ng-repeat="r in req">
             <div class="list">
