--- a/templates/productedit.html
+++ b/templates/productedit.html
@@ -42,7 +42,7 @@
                         <div class="input-label">
                             <span style="font-weight:bold;">Category</span>
                         </div>
-                        <select ng-model="home.area">
+                        <select ng-model="prodetails.category">
                             <option value="">All</option>
                             <option ng-repeat="c in cat" value="{{c.id}}">{{c.name}}</option>
                         </select>
