edit create checkout product done

--- a/templates/productedit.html
+++ b/templates/productedit.html
@@ -13,6 +13,12 @@
                         <img ng-src="{{prodetails.image|serverimage}}">
                         <div class="holder">Edit</div>
                     </div>
+<!--
+                    <div class="profile-img" ng-click="changeprofileimage()">
+                            <img src="{{profile.shoplogo|serverimage}}">
+                            <div class="holder">Edit</div>
+                        </div>
+-->
                     <div class="item item-input text-capitalize">
                         <span class="input-label">Name</span>
                         <input type="text" placeholder="Name" ng-model="prodetails.name" class="pull-right">
