--- a/templates/dealerprd.html
+++ b/templates/dealerprd.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Products">
     <ion-content class="padding">
         <div class="incard">
-            <div class="header-card">Croma</div>
+            <div class="header-card">{{shopname}}</div>
             <!--
             <div class="row productsCol" ng-repeat="sp in spr">
                 <div class="col col-33 text-center" ng-repeat="s in sp" ng-click="getproduct(s.productid)">
