--- a/templates/registration.html
+++ b/templates/registration.html
@@ -19,7 +19,7 @@
                     </label>
                     <label class="item item-input item-stacked-label">
                         <span class="input-label">Number*</span>
-                        <input type="text" placeholder="Number" ng-model="register.number" ng-class="allvalidation[2].validation" required>
+                        <input type="tel" placeholder="Number" ng-model="register.number" ng-class="allvalidation[2].validation" required>
                     </label>
                     <label class="item item-input item-stacked-label">
                         <span class="input-label">Message*</span>
