--- a/templates/modal-sort.html
+++ b/templates/modal-sort.html
@@ -12,7 +12,7 @@
                     <label class="item item-radio">
                         <input type="radio" name="group">
                         <div class="item-content main">
-                            Hight to Low
+                            High to Low
                         </div>
                         <i class="radio-icon ion-checkmark"></i>
                     </label>
@@ -25,6 +25,9 @@
                     </label>
                 </div>
             </form>
+                                <div class="padding-horizontal btn-rest">
+                        <button class="button button-block button-balanced">Submit</button>
+                    </div>
         </div>
     </ion-content>
 </ion-modal-view>
