--- a/templates/productedit.html
+++ b/templates/productedit.html
@@ -9,7 +9,7 @@
         <div class="incard">
             <form ng-submit="">
                 <div class="list prd-form">
-                    <div class="profile-img" ng-click="editproductimage(prodetails.id);">
+                    <div class="profile-img" ng-click="editproductimage();">
                         <img ng-src="{{prodetails.image|serverimage}}">
                         <div class="holder">Edit</div>
                     </div>
@@ -62,7 +62,8 @@
                 </div>
             </form>
             <div class="padding">
-                <button class="button button-block button-balanced" ng-click="editproducts(prodetails);editstatus(prodetails.id,prodetails.status);">Update</button>
+                <button class="button button-block button-balanced" ng-click="editproducts(prodetails);editstatus(prodetails.id,prodetails.status);">Update</button>       
+                         <button class="button button-block button-assertive" ng-click="deleteproduct(prodetails.id,prodetails.user);">Delete</button>
             </div>
         </div>
         </div>
