--- a/templates/productdetails.html
+++ b/templates/productdetails.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="item item-input item-text-wrap">
                     <div class="input itemproducts">
-                        {{prodetails.description}}
+                       <p>{{prodetails.description}}</p> 
                     </div>
                 </div>
             </div>
