--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="item item-input item-text-wrap">
                     <div class="input itemproducts">
-                        {{profile.billingaddress}}
+                       <p> {{profile.billingaddress}}</p>
                     </div>
                 </div>
 
@@ -35,7 +35,7 @@
                 </div>
                 <div class="item item-input item-text-wrap">
                     <div class="input itemproducts">
-                        {{profile.description}}
+                      <p>{{profile.description}}</p>  
                     </div>
                 </div>
                 <ion-item class="item-left">
