--- a/css/style.css
+++ b/css/style.css
@@ -807,6 +807,7 @@ ion-item.item.item-thumbnail-left.trns-add {
 .membershipno input {
     background: #eee;
 	width: 100%;
+    padding: 0px 0px 0px 10px;
 }
 
 .registration.pull-right {
