--- a/templates/orders.html
+++ b/templates/orders.html
@@ -19,7 +19,7 @@
                     <img ng-src={{p.productimage|serverimage}}>
                     <h3 class="leftnames">Name: <span>{{p.productname}}</span></h2>
                     <h3 class="leftnames">Price: <span>{{p.price}}</span></h3>
-                    <h3 class="leftnames">Transaction ID: <span>{{p.transactionid}}</span></h3>
+                    <h3 class="leftnames">Order ID: <span>{{p.id}}</span></h3>
                 </div>
                 <!--
                    <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">
@@ -37,7 +37,7 @@
                    <img ng-src={{o.productimage|serverimage}}>
                     <h3 class="leftnames">Name: <span>{{o.productname}}</span></h3>
                     <h3 class="leftnames">Price: <span>{{o.price}}</span></h3>
-                    <h3 class="leftnames">Transaction ID: <span>{{o.transactionid}}</span></h3>
+                    <h3 class="leftnames">Order ID: <span>{{o.id}}</span></h3>
                 </div>
             </div>
             <div class="centers" ng-if="ordr.length==0">No Sell.</div>
