--- a/templates/product.html
+++ b/templates/product.html
@@ -24,6 +24,18 @@
                 </select>
             </label>
 
+<!--
+            <label class="item item-input item-select area">
+                    <div class="input-label">
+                        Categories
+                    </div>
+                    <select ng-model="product.category">
+                        <option value="">All</option>
+                        <option ng-repeat="categories in user.category" value="{{categories.id}}">{{categories.name}}</option>
+                    </select>
+                </label>
+-->
+           
             <div class="row">
                 <div class="col">
                     <h5 class="member">Keyword</h5>
