--- a/templates/shop.html
+++ b/templates/shop.html
@@ -31,7 +31,7 @@
             </div>
             <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
-                    {{profile.address}}
+					<p> {{profile.address}} </p>
                 </div>
             </div>
             <div class="item item-input item-text-wrap header">
@@ -39,7 +39,7 @@
             </div>
             <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
-                    {{profile.description}}
+                   <p>{{profile.description}}</p> 
                 </div>
             </div>
             <ion-item class="item-left">
