--- a/css/style.css
+++ b/css/style.css
@@ -416,9 +416,9 @@ p.info {
 }
 
 .incard .item.item-input {
-    /* padding: 5px 15px; */
-    /* border-width: 0px; */
-    /* margin: 0; */
+    padding: 5px 15px;
+    border-width: 0px;
+    margin: 0;
 }
 
 .headed.item {
@@ -801,7 +801,8 @@ ion-item.item.item-thumbnail-left.trns-add {
 }
 
 .input-div {
-    display: inline-table;
+    width: 33.33%;
+  display: table-cell;
 }
 
 .membershipno input {
