--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="item item-input item-text-wrap">
 					<div class="input itemproducts">
-						{{getsinglepro.description}}
+                        <p>{{getsinglepro.description}}</p>
 					</div>
 				</div>
 				<!--
