--- a/templates/shop.html
+++ b/templates/shop.html
@@ -26,19 +26,19 @@
                     {{profile.category}}
                 </div>
             </ion-item>
-            <div class="item item-input item-text-wrap header">
+            <div class="item item-text-wrap header">
                 <h2>Address</h2>
             </div>
-            <div class="item item-input item-text-wrap">
-                <div class="input itemproducts">
+            <div class="item item-text-wrap">
+                <div class="itemproducts">
 					<p> {{profile.address}} </p>
                 </div>
             </div>
-            <div class="item item-input item-text-wrap header">
+            <div class="item item-text-wrap header">
                 <h2> Details</h2>
             </div>
-            <div class="item item-input item-text-wrap">
-                <div class="input itemproducts">
+            <div class="item item-text-wrap">
+                <div class="itemproducts">
                    <p>{{profile.description}}</p> 
                 </div>
             </div>
@@ -67,10 +67,10 @@
                     {{profile.website}}
                 </div>
             </ion-item>
-            <div class="item item-input item-text-wrap header" ng-if="shoppic.length>0">
+            <div class="item item-text-wrap header" ng-if="shoppic.length>0">
                 <h2>Shops Photos</h2>
             </div>
-            <div class="item item-input item-text-wrap itemimage">
+            <div class="item item-text-wrap itemimage">
                 <div class="input-div" ng-repeat="s in shoppic">
                     <button class="button" ng-click="openpswd();">
                         <img ng-src="{{s.photo|serverimage}}">
@@ -78,10 +78,10 @@
                 </div>
 
             </div>
-            <div class="item item-input item-text-wrap header" ng-if="img.length>0">
+            <div class="item item-text-wrap header" ng-if="img.length>0">
                 <h2>  Products Photos</h2>
             </div>
-            <div class="item item-input item-text-wrap itemimage">
+            <div class="item item-text-wrap itemimage">
                 <div class="input-div" ng-repeat="i in img">
                     <button class="button" ng-click="openshops();">
 <!--                    <a class="button border-none" href="#/app/productdetail">-->
