--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -5,43 +5,43 @@
         <form ng-submit="">
             <div class="list buy-form">
                 <div class="item item-input text-capitalize">
-                    <span>Name*</span>
+                    <span class="input-label">Name*</span>
                     <input class="pull-right" type="text" placeholder="Enter your Name" ng-model="form.name" ng-class="allvalidation[0].validation" required>
                 </div>
                 <div class="item item-input">
-                    <span>Email*</span>
+                    <span class="input-label">Email*</span>
                     <input class="pull-right" type="email" placeholder="Email" ng-model="form.email" ng-class="allvalidation[1].validation" required>
                 </div>
                 <div class="item item-input">
-                    <span>Contact no*</span>
+                    <span class="input-label">Contact no*</span>
                     <input class="pull-right" type="tel" placeholder="Phone Number" ng-model="form.personalcontact" ng-class="allvalidation[2].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
-                    <span>Address*</span>
+                    <span class="input-label">Address*</span>
                     <textarea class="pull-right form-addrs" ng-model="form.billingaddress" ng-class="allvalidation[3].validation" required></textarea>
                 </div>
                 <div class="item item-input text-capitalize">
-                    <span>City*</span>
+                    <span class="input-label">City*</span>
                     <input class="pull-right" type="text" placeholder="City" ng-model="form.billingcity" ng-class="allvalidation[4].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
-                    <span>Pincode*</span>
+                    <span class="input-label">Pincode*</span>
                     <input class="pull-right" type="text" placeholder="Pincode" ng-model="form.billingpincode" ng-class="allvalidation[5].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
-                    <span>State*</span>
+                    <span class="input-label">State*</span>
                     <input class="pull-right" type="text" placeholder="State" ng-model="form.billingstate" ng-class="allvalidation[6].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
-                    <span>Country*</span>
+                    <span class="input-label">Country*</span>
                     <input class="pull-right" type="text" placeholder="Country" ng-model="form.billingcountry" ng-class="allvalidation[7].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
-                    <span>Quantity*</span>
+                    <span class="input-label">Quantity*</span>
                     <input class="pull-right" type="text" placeholder="Quantity" ng-model="form.quantity" ng-class="allvalidation[8].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
-                    <span>Logistic Charge</span>
+                    <span class="input-label">Logistic Charge</span>
                     <input class="pull-right" type="text" placeholder="Logistics Charges" ng-model="form.logisticcharge" ng-class="allvalidation[9].validation" required>
                 </div>
             </div>
@@ -99,23 +99,23 @@
                         </div>
 -->
                     <div class="item item-input text-capitalize">
-                        <span>Address</span>
+                        <span class="input-label">Address</span>
                         <textarea ng-model="form.shippingaddress" class="pull-right"></textarea>
                     </div>
                     <div class="item item-input text-capitalize">
-                        <span>City</span>
+                        <span class="input-label">City</span>
                         <input ng-model="form.shippingcity" class="pull-right" type="text" placeholder="City">
                     </div>
                     <div class="item item-input text-capitalize">
-                        <span>Pincode</span>
+                        <span class="input-label">Pincode</span>
                         <input ng-model="form.shippingpincode" class="pull-right" type="text" placeholder="Pincode">
                     </div>
                     <div class="item item-input text-capitalize">
-                        <span>State</span>
+                        <span class="input-label">State</span>
                         <input ng-model="form.shippingstate" class="pull-right" type="text" placeholder="State">
                     </div>
                     <div class="item item-input text-capitalize">
-                        <span>Country</span>
+                        <span class="input-label">Country</span>
                         <input class="pull-right" type="text" placeholder="Country" ng-model="form.shippingcountry">
                     </div>
 
