--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -32,7 +32,7 @@
                         <div class="item item-input text-capitalize">
                             <textarea placeholder="Address" ng-model="profile.billingaddress"></textarea>
                         </div>
-                        <div class="item item-input text-capitalize">
+                        <div class="item text-capitalize">
                             <textarea placeholder="Description" ng-model="profile.description"></textarea>
                         </div>
                         <div class="item item-input">
@@ -51,23 +51,23 @@
                         <div class="item item-input item-text-wrap header">
                             <h2>Shops Photos</h2>
                         </div>
-                        <div class="item item-input item-text-wrap itemproducts">
+                        <div class="row">
 
 
-                            <div class="input-div" ng-repeat="i in pic" ng-click="changeshopimage(i.id);">
+                            <div class="col input-div" ng-repeat="i in pic" ng-click="changeshopimage(i.id);">
                                 <div class="img-profile">
                                     <img ng-src="{{i.photo|serverimage}}">
                                 </div>
                             </div>
 
-                            <div class="input-div" ng-if="pic.length==0" ng-click="changeshopimage('');">
+                            <div class="col input-div" ng-if="pic.length==0" ng-click="changeshopimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
                                 </div>
                             </div>
 
-                            <div class="input-div" ng-if="pic.length==0 || pic.length==1" ng-click="changeshopimage('');">
+                            <div class="col input-div" ng-if="pic.length==0 || pic.length==1" ng-click="changeshopimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
@@ -87,21 +87,21 @@
                         <div class="item item-input item-text-wrap header">
                             <h2>Products Photos</h2>
                         </div>
-                        <div class="item item-input item-text-wrap itemproducts">
+                       <div class="row">
 
-                            <div class="input-div" ng-repeat="i in image" ng-click="changeproductimage(i.id);">
+                           <div class="col input-div" ng-repeat="i in image" ng-click="changeproductimage(i.id);">
                                 <div class="img-profile">
                                     <img ng-src="{{i.photo|serverimage}}">
                                 </div>
                             </div>
 
-                            <div class="input-div" ng-if="image.length==0" ng-click="changeproductimage('');">
+                            <div class="col input-div" ng-if="image.length==0" ng-click="changeproductimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
                                 </div>
                             </div>
-                            <div class="input-div" ng-if="image.length==0 || image.length==1" ng-click="changeproductimage('');">
+                            <div class="col input-div" ng-if="image.length==0 || image.length==1" ng-click="changeproductimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
