--- a/templates/shop.html
+++ b/templates/shop.html
@@ -67,25 +67,25 @@
                     {{profile.website}}
                 </div>
             </ion-item>
-            <div class="item item-text-wrap header" ng-if="shoppic.length>0">
+            <div class="item item-input item-text-wrap header" ng-if="shoppic.length>0">
                 <h2>Shops Photos</h2>
             </div>
-            <div class="item item-text-wrap itemimage">
-                <div class="input-div" ng-repeat="s in shoppic">
+            <div class="row">
+                <div class="col input-div" ng-repeat="s in shoppic">
                     <button class="button" ng-click="openpswd();">
-                        <img ng-src="{{s.photo|serverimage}}">
+                        <img ng-src="{{s.photo|serverimage}}" class="full-size">
                     </button>
                 </div>
 
             </div>
-            <div class="item item-text-wrap header" ng-if="img.length>0">
+            <div class="item item-input item-text-wrap header" ng-if="img.length>0">
                 <h2>  Products Photos</h2>
             </div>
-            <div class="item item-text-wrap itemimage">
-                <div class="input-div" ng-repeat="i in img">
+            <div class="row">
+                <div class="col input-div" ng-repeat="i in img">
                     <button class="button" ng-click="openshops();">
 <!--                    <a class="button border-none" href="#/app/productdetail">-->
-                        <img ng-src="{{i.photo|serverimage}}" class="full-image">
+                        <img ng-src="{{i.photo|serverimage}}" class="full-size">
 <!--                    </a>-->
                     </button>
                 </div>
