--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -1,4 +1,4 @@
-<ion-view view-title="My Product Details">
+<ion-view view-title="Product Details">
 	<ion-content class="padding">
 		<div class="incard">
 			<div class="profile-img">
@@ -48,7 +48,7 @@
 				<div class="item item-input item-text-wrap header">
 					<h2>Description</h2>
 				</div>
-				<div class="item item-input item-text-wrap">
+				<div class="item item-text-wrap">
 					<div class="input itemproducts">
                         <p>{{getsinglepro.description}}</p>
 					</div>
