--- a/css/style.css
+++ b/css/style.css
@@ -312,9 +312,14 @@ div.ps-toolbar-play div.ps-toolbar-content {
     left: 0;
     margin: auto;
     overflow: auto;
-    position: fixed;
+    position: absolute;
     right: 0;
-    top: 0;
+    top: 40%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .slider {
