--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -8,14 +8,14 @@
 			<div class="list profile-cont padtop5">
 				<ion-item class="item-left">
 					<h2>Price</h2>
-					<div class="pull-right item-right text-capitalize">
+					<div class="item-note item-right text-capitalize">
 						{{getsinglepro.price}}
 					</div>
 				</ion-item>
 
 				<ion-item class="item-left">
 					<h2>Quantity</h2>
-					<div class="pull-right item-right text-capitalize">
+					<div class="item-note item-right text-capitalize">
 						{{getsinglepro.quantity}}
 					</div>
 				</ion-item>
@@ -28,7 +28,7 @@
 				</ion-item>
 				<ion-item class="item-left">
 					<h2>Category</h2>
-					<div class="pull-right item-right text-capitalize">
+					<div class="item-note item-right text-capitalize">
 						{{getsinglepro.categoryname}}
 					</div>
 				</ion-item>
@@ -41,7 +41,7 @@
 				</ion-item>
 				<ion-item class="item-left" ng-click=getallprod(getsinglepro.user);>
 					<h2>Shop</h2>
-					<div class="pull-right item-right text-capitalize blue">
+					<div class="item-note item-right text-capitalize blue">
 						{{getsinglepro.shopname}}
 					</div>
 				</ion-item>
