--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -8,40 +8,40 @@
 			<div class="list profile-cont padtop5">
 				<ion-item class="item-left">
 					<h2>Price</h2>
-					<div class="item-note item-right text-capitalize">
+					<div class="item-note text-capitalize">
 						{{getsinglepro.price}}
 					</div>
 				</ion-item>
 
 				<ion-item class="item-left">
 					<h2>Quantity</h2>
-					<div class="item-note item-right text-capitalize">
+					<div class="item-note text-capitalize">
 						{{getsinglepro.quantity}}
 					</div>
 				</ion-item>
 
 				<ion-item class="item-left">
 					<h2>SKU</h2>
-					<div class="pull-right item-right text-capitalize">
+					<div class="item-note text-capitalize">
 						{{getsinglepro.sku}}
 					</div>
 				</ion-item>
 				<ion-item class="item-left">
 					<h2>Category</h2>
-					<div class="item-note item-right text-capitalize">
+					<div class="item-note text-capitalize">
 						{{getsinglepro.categoryname}}
 					</div>
 				</ion-item>
 
 				<ion-item class="item-left">
 					<h2>Status</h2>
-					<div class="pull-right item-right text-capitalize">
+					<div class="item-note text-capitalize">
 						Avaliable
 					</div>
 				</ion-item>
 				<ion-item class="item-left" ng-click=getallprod(getsinglepro.user);>
 					<h2>Shop</h2>
-					<div class="item-note item-right text-capitalize blue">
+					<div class="item-note text-capitalize blue">
 						{{getsinglepro.shopname}}
 					</div>
 				</ion-item>
