--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -6,46 +6,46 @@
 				<h3>{{getsinglepro.name}}</h3>
 			</div>
 			<div class="list profile-cont padtop5">
-				<ion-item class="item-left">
+				<ion-item class="item">
 					<h2>Price</h2>
 					<div class="item-note text-capitalize">
 						{{getsinglepro.price}}
 					</div>
 				</ion-item>
 
-				<ion-item class="item-left">
+				<ion-item class="item">
 					<h2>Quantity</h2>
 					<div class="item-note text-capitalize">
 						{{getsinglepro.quantity}}
 					</div>
 				</ion-item>
 
-				<ion-item class="item-left">
+				<ion-item class="item">
 					<h2>SKU</h2>
 					<div class="item-note text-capitalize">
 						{{getsinglepro.sku}}
 					</div>
 				</ion-item>
-				<ion-item class="item-left">
+				<ion-item class="item">
 					<h2>Category</h2>
 					<div class="item-note text-capitalize">
 						{{getsinglepro.categoryname}}
 					</div>
 				</ion-item>
 
-				<ion-item class="item-left">
+				<ion-item class="item">
 					<h2>Status</h2>
 					<div class="item-note text-capitalize">
 						Avaliable
 					</div>
 				</ion-item>
-				<ion-item class="item-left" ng-click=getallprod(getsinglepro.user);>
+				<ion-item class="item" ng-click=getallprod(getsinglepro.user);>
 					<h2>Shop</h2>
 					<div class="item-note text-capitalize blue">
 						{{getsinglepro.shopname}}
 					</div>
 				</ion-item>
-				<div class="item item-input item-text-wrap header">
+				<div class="item item-text-wrap header">
 					<h2>Description</h2>
 				</div>
 				<div class="item item-text-wrap">
