--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -7,46 +7,46 @@
 			</div>
 			<div class="list profile-cont padtop5">
 				<ion-item class="item">
-					<h2>Price</h2>
+					Price
 					<div class="item-note text-capitalize">
 						{{getsinglepro.price}}
 					</div>
 				</ion-item>
 
 				<ion-item class="item">
-					<h2>Quantity</h2>
+					Quantity
 					<div class="item-note text-capitalize">
 						{{getsinglepro.quantity}}
 					</div>
 				</ion-item>
 
 				<ion-item class="item">
-					<h2>SKU</h2>
+					SKU
 					<div class="item-note text-capitalize">
 						{{getsinglepro.sku}}
 					</div>
 				</ion-item>
 				<ion-item class="item">
-					<h2>Category</h2>
+					Category
 					<div class="item-note text-capitalize">
 						{{getsinglepro.categoryname}}
 					</div>
 				</ion-item>
 
 				<ion-item class="item">
-					<h2>Status</h2>
+					Status
 					<div class="item-note text-capitalize">
 						Avaliable
 					</div>
 				</ion-item>
 				<ion-item class="item" ng-click=getallprod(getsinglepro.user);>
-					<h2>Shop</h2>
+					Shop
 					<div class="item-note text-capitalize blue">
 						{{getsinglepro.shopname}}
 					</div>
 				</ion-item>
 				<div class="item item-text-wrap header">
-					<h2>Description</h2>
+					Description
 				</div>
 				<div class="item item-text-wrap">
 					<div class="input itemproducts">
