--- a/templates/modal-mysale.html
+++ b/templates/modal-mysale.html
@@ -35,9 +35,9 @@
                 </ion-item>
 
                 <ion-item class="item-left">
-                    <h2>Transition Id</h2>
+                    <h2>Order Id</h2>
                     <div class="pull-right item-right text-capitalize">
-                        {{getsell.transactionid}}
+                        {{getsell.id}}
                     </div>
                 </ion-item>
             </div>
