--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -132,5 +132,10 @@
                 Submit &amp; Buy
             </button>
         </div>
+        <div class="padding">
+            <button class="button button-block button-royal" ng-click="openedit();">
+                Test
+            </button>
+        </div>
     </ion-content>
 </ion-view>
