change it sohan

--- a/css/style.css
+++ b/css/style.css
@@ -1035,6 +1035,7 @@ ion-footer-bar.footer-shop h4 {
     min-height: 0px!important;
 }
 
+/*
 button.button.button-icon.button-clear.ion-navicon.hide {
     display: block;
-}
+}*/
