popup added or low pb

--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -36,10 +36,10 @@
                             <textarea placeholder="Description" ng-model="profile.description"></textarea>
                         </div>
                         <div class="item item-input">
-                            <input type="tel" placeholder="Mobile No." ng-model="profile.shopcontact1">
+                            <input type="tel" maxlength="10" placeholder="Mobile No." ng-model="profile.shopcontact1">
                         </div>
                         <div class="item item-input">
-                            <input type="tel" placeholder="Landline No." ng-model="profile.shopcontact2">
+                            <input type="tel" maxlength="10" placeholder="Landline No." ng-model="profile.shopcontact2">
                         </div>
 
                         <div class="item item-input">
