--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="item item-input">
                     <span class="input-label">Contact no*</span>
-                    <input class="pull-right" type="tel" placeholder="Phone Number" ng-model="form.personalcontact" ng-class="allvalidation[2].validation" required>
+                    <input class="pull-right" type="tel" placeholder="Phone Number" maxlength="10" ng-model="form.personalcontact" ng-class="allvalidation[2].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Address*</span>
@@ -26,7 +26,7 @@
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">Pincode*</span>
-                    <input class="pull-right" type="text" placeholder="Pincode" ng-model="form.billingpincode" ng-class="allvalidation[5].validation" required>
+                    <input class="pull-right" type="tel" maxlength="6" placeholder="Pincode" ng-model="form.billingpincode" ng-class="allvalidation[5].validation" required>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">State*</span>
