--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -45,7 +45,7 @@
 						{{getsinglepro.shopname}}
 					</div>
 				</ion-item>
-				<div class="item item-text-wrap header">
+				<div class="item">
 					Description
 				</div>
 				<div class="item item-text-wrap">
