--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,7 +1,7 @@
 <ion-view view-title="My Orders">
    
     
-    <div class="tabs-striped tabs-top tabs-background-royal tabs-color-light">
+    <div class="tabs-striped  tabs-top tabs-background-royal tabs-color-light">
         <div class="tabs">
             <a class="tab-item" ng-click="tabvalue = 1;"  ng-class="{'active': tabvalue == 1}">
         My Purchase
@@ -11,7 +11,7 @@
       </a>
         </div>
     </div>
-    <ion-content class="padding has-headers">
+    <ion-content class="padding has-tabs-top">
         <div class="incard">
             <div class="list" ng-if="tabvalue == 1" ng-if="mypurchase.length>0">
                 <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
